2008-11-01 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java
      (Define.if, Define.unless): added attributes to conditionally define
      preprocessor tags added as nested elements of rapc task
      (execute): enable preprocessor when defines attribute or nested define
      elements are set


2008-11-01 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java: applied patch by Derek Konigsberg for preprocessor support
      (RapcTask.Define): new nested element class
      (execute): when defines attribute or nested <define> elements are set,
      enable preprocessor


2008-07-30 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java
      (verbose,nodebug,nowarn,warnerror,noconvert): new compiler flags


2008-07-29 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java (setJdeHome): remove code for locating JDE specific jar
      files to avoid causing conflicts when using project level jde.home
      property and setting jdehome property in rapc task
      (execute): add api jar to import path
      (executeRapc): get rapc jar path as local variable


2008/07/23 (josh)

- Applied patch contributed by atleta to add property for explicitly setting
  the search path for the preverify tool.

2008/03/31 (josh)
- Applied patch contributed by badgrs to rename the description property
  in JdpType from 'desc' to 'description'.

2008/01/17 (josh)
- Quick update to RapcTask to automatically add the JDE\bin directory to
  the PATH environment variable since people are consistently finding that
  an error occurs trying to compile (ie: preverify.exe can't be found).
- Release 0.7

2007/08/10 (josh)
- Added property to Sigtool for automatically requesting signature without
  password prompt (requires JDE 4.3.x)
- Sixth release (0.6)

2007/07/19 (josh)
- Bug fix: set the failOnError property to true for the java process that
  runs the rapc compiler

2007/07/02 (josh)
- Added nested type EntryPointType to JdpType for adding alternate entry
  points to CLDC applications